--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,13 @@
   <body>
     <%- include('../partials/header') %>
 
+    <main id="main">
+      <form id="attack-form"></form>
+    </main>
+
     <%- include('../partials/footer') %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
